--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -157,7 +157,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../img/church1.jpg) no-repeat center center scroll;
+    background: url(../img/175.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
